# bbstat

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: ci.yaml
bbstat/: __init__.py  bootstrap.py  estimate.py  evaluate.py  plot.py  registry.py  resample.py  statistics.py  utils.py
changelog/: index.html
docs/: index.md  reference.md
reference/: index.html
search/: search_index.json
tests/: test_bootstrap.py  test_estimate.py  test_evaluate.py  test_plot.py  test_registry.py  test_resample.py  test_statistics.py  test_utils.py
