[project]
name = "bbstat"
version = "0.1.0"
authors = [{ name="Chris Wehmeyer", email="wehmeyer.chris@gmail.com" }]
description = "Tools for Bayesian bootstrapping."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy >= 1.21", "scipy >= 1.11"]

[tool.setuptools]
packages = ["bbstat"]

[tool.mypy]
check_untyped_defs = true

[tool.mkdocs]
site_name = "Your Project Docs"
theme.name = "material"
config_file = "mkdocs.yml"
plugins = [
    "mkdocstrings[python]",
    "search"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest >= 7.0",
    "pytest-cov",
    "scipy-stubs",
]
docs = [
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-get-deps",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings[python]",
]
dev = [
    "tox",
    "build",
    "twine",
    "black",
    "ruff",
    "pre-commit",
    "mypy",
]
