[project]
name = "bbstat"
dynamic = ["version"]
authors = [{ name="Chris Wehmeyer", email="wehmeyer.chris@gmail.com" }]
description = "A lightweight library for Bayesian bootstrapping and statistical evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "matplotlib",
    "numpy >= 1.21",
    "scipy >= 1.11",
]

[tool.setuptools]
packages = ["bbstat"]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
write_to = "bbstat/_version.py"

[tool.mypy]
check_untyped_defs = true

[tool.mkdocs]
site_name = "Your Project Docs"
theme.name = "material"
config_file = "mkdocs.yml"
plugins = [
    "mkdocs-include-markdown-plugin"
    "mkdocstrings[python]",
    "search"
]

[build-system]
requires = [
    "setuptools >= 77.0.3",
    "setuptools-scm",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest >= 7.0",
    "pytest-cov",
    "scipy-stubs",
]
docs = [
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-get-deps",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-include-markdown-plugin",
    "mkdocstrings[python]",
]
dev = [
    "black",
    "build",
    "mypy",
    "pre-commit",
    "ruff",
    "tox",
    "twine",
]
